Fixed Unnecessary SSS Page Write, SS Tab Tooltip Alignment & Retrieval Of Operations

--- a/src/ui/character-selection-screen/character-selection-screen.css
+++ b/src/ui/character-selection-screen/character-selection-screen.css
@@ -212,3 +212,7 @@
 .add-css-page input[type="text"] {
     width: 150px;
 }
+
+.add-css-page .icon-button-tooltip {
+    right: 28px;
+}
