--- a/src/ui/stage-selection-screen/stage-selection-screen.css
+++ b/src/ui/stage-selection-screen/stage-selection-screen.css
@@ -212,3 +212,7 @@
 .add-sss-page input[type="text"] {
     width: 150px;
 }
+
+.add-sss-page .icon-button-tooltip {
+    right: 28px;
+}
